--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,10 @@
 
 @custom-variant dark (&:is(.dark *));
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: url("../public/noisy-background.svg");
   background-color: rgba(0, 0, 0, 0.05);
